--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -1,202 +1,177 @@
 {
-  "pages": {
-    "home": {
-      "headerSettings": {
-        "backgroundColor": "#FF9800",
-        "backgroundImage": "/images/backgrounds/GDG_Devfest2014020-edited.jpg",
-        "fontColor": "#fff",
-        "tabBarColor": "#fff",
-        "hideLogo": true,
-        "minHeight": "360px"
-      }
-    },
-    "blog": {
-      "headerSettings": {
-        "backgroundColor": "#03a9f4",
-        "fontColor": "#fff",
-        "tabBarColor": "#fff"
-      }
-    },
-    "speakers": {
-      "headerSettings": {
-        "backgroundColor": "#3f51b5",
-        "fontColor": "#fff",
-        "tabBarColor": "#fff"
-      }
-    },
-    "schedule": {
-      "headerSettings": {
-        "backgroundColor": "#673ab7",
-        "fontColor": "#fff",
-        "tabBarColor": "#fff"
-      }
-    },
-    "team": {
-      "headerSettings": {
-        "backgroundColor": "#009688",
-        "fontColor": "#fff",
-        "tabBarColor": "#fff"
-      }
-    },
-    "cod": {
-      "headerSettings": {
-        "backgroundColor": "#673ab7",
-        "fontColor": "#fff",
-        "tabBarColor": "#fff"
-      }
+  url: "https://hoverboard.firebaseapp.com/",
+  startDate: "2016-09-09T09:00:00+03:00",
+  endDate: "2016-09-10T19:00:00+03:00",
+  analytics: {
+    prod: "UA-43643469-8",
+    dev: "UA-43643469-9"
+  },
+  organizer: {
+    name: "GDG Lviv",
+    twitter: "gdglviv"
+  },
+  webapp: {
+    shortName: "DevFest",
+    themeColor: "#F57C00",
+    backgroundColor: "#F57C00"
+  },
+  firebase: {
+    name: "hoverboard-experimental",
+    domain: "hoverboard-experimental.firebaseapp.com",
+    database: "https://hoverboard-experimental.firebaseio.com",
+    api: "AIzaSyALDa2D7CMhK_wt2VkET1MaJuQXYVUJd2I",
+    userSessionsPath: "/userSessions",
+    ratingsPath: "/ratings",
+    indexedDbSession: "hoverboard"
+  },
+  mailchimp: {
+    url: "https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe",
+    name: "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
+  },
+  dateFormat: {
+    locale: "en-US",
+    blog: {
+      month: "short",
+      day: "numeric",
+      year: "numeric"
     }
   },
-  "navigation": [
+  hashtag: "dfua",
+  disqusShortName: "hoverboard-gdg-x",
+  tweetsSource: "/data/tweets.json",
+  partnershipProposition: "http://bit.ly/df16-sponsor",
+  videosSessionsUrl: "https://www.youtube.com/playlist?list=PLt8lEzcLNl31AX3-ONkkWmDOZezu9Cmnv",
+  enableSessionsRating: true,
+  navigation: [
     {
-      "route": "home",
-      "permalink": "/"
+      route: "home",
+      permalink: "/"
     },
     {
-      "route": "blog",
-      "permalink": "/blog/"
+      route: "blog",
+      permalink: "/blog/"
     },
     {
-      "route": "team",
-      "permalink": "/team/"
+      route: "schedule",
+      permalink: "/schedule/"
     },
     {
-      "route": "speakers",
-      "permalink": "/speakers/"
+      route: "speakers",
+      permalink: "/speakers/"
     },
     {
-      "route": "schedule",
-      "permalink": "/schedule/"
+      route: "team",
+      permalink: "/team/"
     }
   ],
-  "url": "https://hoverboard.firebaseapp.com/",
-  "mailchimp": {
-    "url": "https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe",
-    "name": "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
-  },
-  "partnershipProposition": "http://bit.ly/df16-sponsor",
-  "disqusShortName": "",
-  "languages": [
+  social: [
     {
-      "name": "English",
-      "key": "en"
+      name: "twitter",
+      nickname: "GDGLviv",
+      url: "https://twitter.com/gdglviv"
+    },
+    {
+      name: "gplus",
+      nickname: "102444623953913144164",
+      url: "https://plus.google.com/102444623953913144164"
+    },
+    {
+      name: "facebook",
+      nickname: "GDGLviv",
+      url: "https://www.facebook.com/GDGLviv"
+    },
+    {
+      name: "linkedin",
+      nickname: "google-developers-group-lviv",
+      url: "https://www.linkedin.com/company/google-developers-group-lviv"
     }
   ],
-  "footerBlocks": [
-    {
-      "title": "for-visitors",
-      "links": [
-        {
-          "text": "team",
-          "url": "/team/"
-        },
-        {
-          "text": "cod",
-          "url": "/cod/"
-        },
-        {
-          "text": "google-developers",
-          "url": "https://developers.google.com/",
-          "newTab": true
-        },
-        {
-          "text": "df-14",
-          "url": "http://www.gdg-dus.de/DevFest2014/",
-          "newTab": true
-        }
-      ]
-    }
-  ],
-  "contactBlock": {
-    "links": [
-      {
-        "text": "info@gdg-dus.de",
-        "url": "mailto:info@gdg-dus.de"
-      }
+  location: {
+    apiKey: "",
+    name: "Pivdennyi Expo Center",
+    address: "36 Shchyretska St, Lviv, Ukraine",
+    link: "https://www.facebook.com/expopivdennij",
+    pointer: {
+      latitude: 49.809841,
+      longitude: 23.972805,
+      zoom: 15
+    },
+    mapCenter: {
+      latitude: 49.809841,
+      longitude: 23.982805
+    },
+    images: [
+      "/images/backgrounds/location_1.jpg",
+      "/images/backgrounds/location_2.jpg",
+      "/images/backgrounds/location_3.jpg"
     ]
   },
-  "tickets": {
-    "url": "https://www.eventbrite.de/e/gdgdus-devfest2016-weekend-tickets-27623283986",
-    "elements": [
-      {
-        "name": "two-day-conference-pass",
-        "price": 10,
-        "currency": "€",
-        "starts": "two-day-conference-pass-starts",
-        "ends": "two-day-conference-pass-ends",
-        "soldOut": false
-      }
-    ]
-  },
-  "teamPageTitle": "team-page-title",
-  "teamPageText": "team-page-text",
-  "statistics": [
-    {
-      "counter": 300,
-      "caption": "attendees"
-    },
-    {
-      "counter": 2,
-      "caption": "days"
-    },
-    {
-      "counter": 2,
-      "caption": "tracks"
-    },
-    {
-      "counter": 20,
-      "caption": "sessions"
-    },
-    {
-      "counter": 20,
-      "caption": "childcare"
-    }
-  ],
-  "hashtag": "DevFestDus",
-  "social": [
-    {
-      "name": "twitter",
-      "nickname": "gdgduesseldorf",
-      "url": "https://twitter.com/gdgduesseldorf"
-    },
-    {
-      "name": "gplus",
-      "nickname": "+Gdg-dusDe",
-      "url": "https://plus.google.com/+Gdg-dusDe/"
-    }
-  ],
-  "tweetsSource": "/data/tweets.json",
-  "gallery": {
-    "albumUrl": "https://plus.google.com/events/gallery/cc6tosp4ohkp6qj9pg5jb4g6o3k?sort=1",
-    "photos": {
-      "big": "/images/backgrounds/GDG_Devfest2014004.jpg",
-      "small": [
-        "/images/backgrounds/GDG_Devfest2014001.jpg",
-        "/images/backgrounds/GDG_Devfest2014066.jpg"
+  gallery: {
+    albumUrl: "https://plus.google.com/events/gallery/cc6tosp4ohkp6qj9pg5jb4g6o3k?sort=1",
+    photos: {
+      big: "/images/backgrounds/2015_1.jpg",
+      small: [
+        "/images/backgrounds/2015_2.jpg",
+        "/images/backgrounds/2015_3.jpg"
       ]
     }
   },
-  "location": {
-    "apiKey": "",
-    "link": "https://www.facebook.com/expopivdennij",
-    "pointer": {
-      "latitude": 51.212235,
-      "longitude": 6.755673,
-      "zoom": 15
+  pages: {
+    home: {
+      title: "Home",
+      headerSettings: {
+        backgroundColor: "#FF9800",
+        backgroundImage: "/images/backgrounds/home.png",
+        fontColor: "#fff",
+        tabBarColor: "#fff",
+        video: {
+          title: "GDG DevFest Ukraine 2016",
+          youtubeId: "TdpbgRgz6eE",
+          text: "See how it was in 2016"
+        },
+        hideLogo: true,
+        minHeight: "360px"
+      }
     },
-    "mapCenter": {
-      "latitude": 51.211771,
-      "longitude":  6.763699
+    blog: {
+      title: "Blog",
+      headerSettings: {
+        backgroundColor: "#03a9f4",
+        fontColor: "#fff",
+        tabBarColor: "#fff"
+      }
     },
-    "images": [
-      "/images/backgrounds/Sipgate_1.JPG",
-      "/images/backgrounds/Sipgate_2.JPG",
-      "/images/backgrounds/Sipgate_3.JPG",
-      "/images/backgrounds/Sipgate_4.JPG"
-    ]
-  },
-  "videosSessionsUrl": "https://www.youtube.com/playlist?list=PLt8lEzcLNl31AX3-ONkkWmDOZezu9Cmnv",
-  "callToAction": {
-    "videoTitle": "action-title",
-    "videoId": "DfMnJAzOFng"
+    speakers: {
+      title: "Speakers",
+      headerSettings: {
+        backgroundColor: "#3f51b5",
+        fontColor: "#fff",
+        tabBarColor: "#fff"
+      }
+    },
+    schedule: {
+      title: "Schedule",
+      headerSettings: {
+        backgroundColor: "#673ab7",
+        fontColor: "#fff",
+        tabBarColor: "#fff"
+      }
+    },
+    team: {
+      title: "Team",
+      headerSettings: {
+        backgroundColor: "#009688",
+        fontColor: "#fff",
+        tabBarColor: "#fff"
+      }
+    },
+    cod: {
+      title: "Cod of Conduct",
+      headerSettings: {
+        backgroundColor: "#673ab7",
+        fontColor: "#fff",
+        tabBarColor: "#fff"
+      }
+    }
   }
 }
